fix non clickable links on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -286,7 +286,7 @@ section {
   background: linear-gradient(white 0%, transparent 100%);
 }
 
-.about::before {
+/* .about::before {
   position: absolute;
   content: "";
   height: 30%;
@@ -294,7 +294,7 @@ section {
   bottom: 0;
   left: 0;
   background: linear-gradient(transparent 0%, white 100%);
-}
+} */
 
 .section-title.about-title {
   margin-bottom: 20px;
